o Removed unused primitives o Refactored makefile to compile external C++ without the need of verilator o Added interface to ease the development of DPI

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,24 +1,38 @@
-TARGET=BeagleSpi
-VFLAGS?=-Wno-lint --prefix $(TARGET)
+VFLAGS?=-Wno-lint
 VINCLUDE?=-Iice40-primitives
-VERILOG_SRC=../beagle-spi.v
-SIM_SRC=sim_main.cc
+VERILOG_SRC_PATH=..
 VERILATOR?=verilator
-VOUT_DIR=obj_dir
+VOUT_DIR=verilated
+VERILATOR_INCLUDE_PATH?=/usr/share/verilator/include
 
-all: $(TARGET)
+CFLAGS+=-Wall \
+	-I$(VERILATOR_INCLUDE_PATH) \
+	-I$(VERILATOR_INCLUDE_PATH)/vltstd
 
-$(VOUT_DIR): $(VERILOG_SRC) $(SIM_SRC)
-	$(VERILATOR) $(VINCLUDE) $(VFLAGS) \
-		--cc $(VERILOG_SRC) --exe $(SIM_SRC) -o ../$(TARGET)
+CXXFLAGS+=-std=c++17 $(CFLAGS)
+CXX?=g++
 
-$(TARGET): $(VOUT_DIR) FORCE
-	$(MAKE) -C $(VOUT_DIR) -f $(TARGET).mk $(TARGET)
+VERILATOR_TARGETS=SpiController
+VERILATOR_DEPS:=$(VERILATOR_TARGETS:%=V%__ALL.a) $(VERILATOR_TARGETS:%=V%.h)
+VERILATOR_DEPS:=$(addprefix $(VOUT_DIR)/, $(VERILATOR_DEPS))
 
-run: $(TARGET)
-	./$<
+TARGETS=spi-controller_test
+
+all: $(TARGETS)
+
+$(VOUT_DIR)/V%__ALL.a $(VOUT_DIR)/V%.h: $(VERILOG_SRC_PATH)/%.v
+	$(VERILATOR) $(VINCLUDE) $(VFLAGS) --Mdir $(VOUT_DIR) --cc $<
+	$(MAKE) -C $(VOUT_DIR) -f ../utils/AppendVkObj.mk -f V$*.mk default
+
+verilated-deps: $(VERILATOR_DEPS)
+
+%.o: %.cc verilated-deps
+	$(CXX) $(CXXFLAGS)  -c  $< -o $@
+
+spi-controller_test: spi-controller_test.o $(VOUT_DIR)/VSpiController__ALL.a
+	$(CXX) -o $@  $^ $(LDFLAGS)
 
 clean:
-	rm -rf $(VOUT_DIR)
+	rm -rf $(VOUT_DIR) *.o $(TARGETS)
 
-.PHONY: FORCE
+.PHONY: FORCE verilated-deps
