--- a/sim/utils/Makefile
+++ b/sim/utils/Makefile
@@ -4,6 +4,7 @@ GMOCK_SOURCE?=/usr/src/gmock
 GTEST_INCLUDE=-I$(GTEST_SOURCE)/include -I$(GMOCK_SOURCE)/include
 
 CFLAGS+=-Wall -g -O0
+CFLAGS+=-Wno-packed-bitfield-compat
 
 # See toplevel Makefile comment
 CXXFLAGS+=-std=c++17 $(CFLAGS)
@@ -11,12 +12,18 @@ CXX?=g++
 
 LDFLAGS+=-lpthread -lm
 
+OBJECTS=bits.o
+GENLIB=libutils.a
+
 UNITTEST_BINARIES=bits_test
 TEST_FRAMEWORK_OBJECTS=gtest-all.o gmock-all.o
 
 DEPENDENCY_RULES=$(OBJECTS:=.d) $(UNITTEST_BINARIES:=.o.d)
 
-all:
+all : $(GENLIB)
+
+$(GENLIB): $(OBJECTS)
+	$(AR) rcs $@ $^
 
 test: $(UNITTEST_BINARIES)
 	for test_bin in $(UNITTEST_BINARIES) ; do echo ; echo $$test_bin; ./$$test_bin || exit 1 ; done
@@ -26,6 +33,10 @@ valgrind-test: $(UNITTEST_BINARIES)
 
 %_test: %_test.o $(GENLIB) $(TEST_FRAMEWORK_OBJECTS) compiler-flags
 	$(CXX) -o $@ $< $(GENLIB) $(LDFLAGS) $(TEST_FRAMEWORK_OBJECTS)
+
+%.o: %.cc compiler-flags
+	$(CXX) $(CXXFLAGS)  -c  $< -o $@
+	@$(CXX) $(CXXFLAGS) -MM $< > $@.d
 
 %_test.o: %_test.cc compiler-flags
 	$(CXX)  $(GTEST_INCLUDE) $(CXXFLAGS) -c  $< -o $@
@@ -42,7 +53,7 @@ gmock-all.o : $(GMOCK_SOURCE)/src/gmock-all.cc compiler-flags
 	$(CROSS_COMPILE)$(CXX) $(CXXFLAGS) $(GTEST_INCLUDE) -I$(GMOCK_SOURCE) -I$(GMOCK_SOURCE)/include -c  $< -o $@
 
 clean:
-	rm -rf $(UNITTEST_BINARIES) $(UNITTEST_BINARIES:=.o) $(DEPENDENCY_RULES) $(TEST_FRAMEWORK_OBJECTS)
+	rm -rf $(GENLIB) $(MAIN_OBJECTS) $(OBJECTS) $(UNITTEST_BINARIES) $(UNITTEST_BINARIES:=.o) $(DEPENDENCY_RULES) $(TEST_FRAMEWORK_OBJECTS)
 
 compiler-flags: FORCE
 	@echo '$(CXX) $(CXXFLAGS) $(GTEST_INCLUDE)' | cmp -s - $@ || echo '$(CXX) $(CXXFLAGS) $(GTEST_INCLUDE)' > $@
