Fixed makefile to make "tests"

--- a/sim/ice40-primitives/Makefile
+++ b/sim/ice40-primitives/Makefile
@@ -18,14 +18,20 @@ CFLAGS+=-I$(VERILATOR_INCLUDE) -I$(VERILATOR_INCLUDE)/vltstd
 CXXFLAGS+=-std=c++17 $(CFLAGS)
 CXX?=g++
 
+UTILS_LIB=../utils/libutils.a
+
 LDFLAGS+=-lpthread -lm
 
 OBJECTS=sb-spi.o
 GENLIB=libice40dpi.a
 
 VERILATOR_TARGETS=SB_SPI
-VERILATOR_DEPS:=$(VERILATOR_TARGETS:%=V%__ALL.a) $(VERILATOR_TARGETS:%=V%.h)
-VERILATOR_DEPS:=$(addprefix $(VOUT_DIR)/, $(VERILATOR_DEPS))
+VERILATOR_LIBS:=$(VERILATOR_TARGETS:%=V%__ALL.a)
+VERILATOR_LIBS:=$(addprefix $(VOUT_DIR)/, $(VERILATOR_LIBS))
+VERILATOR_HEADERS:=$(VERILATOR_TARGETS:%=V%.h)
+VERILATOR_HEADERS:=$(addprefix $(VOUT_DIR)/, $(VERILATOR_HEADERS))
+
+VERILATOR_DEPS:=$(VERILATOR_LIBS) $(VERILATOR_HEADERS)
 
 UNITTEST_BINARIES=sb-spi_test
 TEST_FRAMEWORK_OBJECTS=gtest-all.o gmock-all.o
@@ -49,8 +55,8 @@ $(VOUT_DIR)/V%__ALL.a $(VOUT_DIR)/V%.h: $(VERILOG_SRC_PATH)/%.v
 
 verilated-deps: $(VERILATOR_DEPS)
 
-%_test: %_test.o $(GENLIB) $(TEST_FRAMEWORK_OBJECTS) compiler-flags
-	$(CXX) -o $@ $< $(GENLIB) $(LDFLAGS) $(TEST_FRAMEWORK_OBJECTS)
+%_test: %_test.o $(GENLIB) $(UTILS_LIB) $(VERILATOR_LIBS) $(TEST_FRAMEWORK_OBJECTS) compiler-flags
+	$(CXX) -o $@ $< $(GENLIB) $(UTILS_LIB) $(VERILATOR_LIBS) $(LDFLAGS) $(TEST_FRAMEWORK_OBJECTS)
 
 %.o: %.cc compiler-flags verilated-deps
 	$(CXX) $(CXXFLAGS)  -c  $< -o $@
