Starting simple protocol tester.

--- a/host/Makefile
+++ b/host/Makefile
@@ -1,9 +1,11 @@
+CXXFLAGS=-Wall -W -Wextra
 
 all: spidev_test beagleg-protocol
 
-beagleg-protocol: spi.o
+beagleg-protocol: beagleg-protocol.o spi.o
+	$(CXX) -o $@ $^
 
 spidev_test:
 
 clean:
-	rm -f spidev_test
+	rm -f spidev_test beagleg-protocol *.o
