WIP - Added xls cubic function, checking values in verilator test file

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,5 +1,3 @@
-KEBAB2PASCAL=utils/kebab2pascal
-
 VFLAGS?=-Wno-lint
 VINCLUDE?=-Iice40-primitives
 VERILOG_SRC_PATH=..
@@ -13,16 +11,21 @@ CFLAGS+=-Wno-packed-bitfield-compat
 CFLAGS+=-Wall \
 	-I$(VERILATOR_INCLUDE) \
 	-I$(VERILATOR_INCLUDE)/vltstd \
-	-Ifpm/include
+	-I../utils
 
 CXXFLAGS+=-std=c++17 $(CFLAGS)
 CXX?=g++
 
-VERILATOR_TARGETS=cubic-bezier
+VERILATOR_TARGETS=
 VERILATOR_DEPS:=$(VERILATOR_TARGETS:%=lib%-module.a) $(VERILATOR_TARGETS:%=%-module.h)
 VERILATOR_DEPS:=$(addprefix $(VOUT_DIR)/, $(VERILATOR_DEPS))
 
+VERILATOR_XLS_TARGETS=cubic-bezier
+VERILATOR_XLS_DEPS:=$(VERILATOR_XLS_TARGETS:%=xls/lib%-module.a) $(VERILATOR_XLS_TARGETS:%=xls/%-module.h)
+VERILATOR_XLS_DEPS:=$(addprefix $(VOUT_DIR)/, $(VERILATOR_XLS_DEPS))
+
 COMMON_LIBS=ice40-primitives/libice40dpi.a
+MWC=../utils/multi-word-converter
 
 TARGETS=cubic-bezier_test
 
@@ -31,25 +34,37 @@ all: verilated-deps $(TARGETS)
 ice40-primitives/libice40dpi.a:
 	$(MAKE) -C ice40-primitives
 
-$(VOUT_DIR)/lib%-module.a $(VOUT_DIR)/%-module.h: $(VERILOG_SRC_PATH)/%.sv $(KEBAB2PASCAL)
-	$(eval PASCAL_NAME:=$(shell $(KEBAB2PASCAL) $*))
+generate-xls-sources:
+	$(MAKE) -C .. generate-xls-sources
+
+$(VOUT_DIR)/lib%-module.a $(VOUT_DIR)/%-module.h: $(VERILOG_SRC_PATH)/%.sv $(MWC)
+	$(eval PASCAL_NAME:=$(shell $(MWC) dash pascal $*))
 	$(VERILATOR) $(VINCLUDE) $(VFLAGS) --Mdir $(VOUT_DIR) --prefix V$(PASCAL_NAME) --cc $<
-	$(MAKE) -C $(VOUT_DIR) -f ../utils/AppendVkObj.mk -f V$(PASCAL_NAME).mk default
+	$(MAKE) -C $(VOUT_DIR) -f ../../utils/AppendVkObj.mk -f V$(PASCAL_NAME).mk default
 	mv $(VOUT_DIR)/V$(PASCAL_NAME)__ALL.a $(VOUT_DIR)/lib$*-module.a
 	mv $(VOUT_DIR)/V$(PASCAL_NAME).h $(VOUT_DIR)/$*-module.h
 
-verilated-deps: $(VERILATOR_DEPS)
+# For xls folder
+$(VOUT_DIR)/xls/lib%-module.a $(VOUT_DIR)/xls/%-module.h: $(VERILOG_SRC_PATH)/xls/%.sv $(MWC)
+	$(eval PASCAL_NAME:=$(shell $(MWC) dash pascal $*))
+	@mkdir -p $(VOUT_DIR)
+	$(VERILATOR) $(VINCLUDE) $(VFLAGS) --Mdir $(VOUT_DIR)/xls --prefix V$(PASCAL_NAME) --cc $<
+	$(MAKE) -C $(VOUT_DIR)/xls -f ../../../utils/AppendVkObj.mk -f V$(PASCAL_NAME).mk default
+	mv $(VOUT_DIR)/xls/V$(PASCAL_NAME)__ALL.a $(VOUT_DIR)/xls/lib$*-module.a
+	mv $(VOUT_DIR)/xls/V$(PASCAL_NAME).h $(VOUT_DIR)/xls/$*-module.h
+
+verilated-deps: generate-xls-sources $(VERILATOR_DEPS) $(VERILATOR_XLS_DEPS)
 
 %.o: %.cc verilated-deps
 	$(CXX) $(CXXFLAGS)  -c  $< -o $@
 
-cubic-bezier_test: cubic-bezier_test.o $(VOUT_DIR)/libcubic-bezier-module.a $(COMMON_LIBS)
+cubic-bezier_test: cubic-bezier_test.o $(VOUT_DIR)/xls/libcubic-bezier-module.a $(COMMON_LIBS)
 	$(CXX) -o $@  $^ $(LDFLAGS)
 
-$(KEBAB2PASCAL):
-	$(MAKE) -C utils kebab2pascal
+$(MWC):
+	$(MAKE) -C ../utils multi-word-converter
 
 clean:
 	rm -rf $(VOUT_DIR) *.o $(TARGETS)
 
-.PHONY: FORCE verilated-deps
+.PHONY: FORCE verilated-deps generate-xls-sources
