Hack up beagleg protocol to use simulation.

--- a/host/Makefile
+++ b/host/Makefile
@@ -1,11 +1,19 @@
-CXXFLAGS=-Wall -W -Wextra
+CXXFLAGS=-Wall -W -Wextra -I../sim -I/usr/local/share/verilator/include -std=c++17
+
+SIM_LIB=../sim/libhsgsim.a
 
 all: spidev_test beagleg-protocol
 
-beagleg-protocol: beagleg-protocol.o spi.o
-	$(CXX) -o $@ $^
+$(SIM_LIB): PHONY
+	$(MAKE) -C ../sim libhsgsim.a
+
+beagleg-protocol: beagleg-protocol.o spi.o $(SIM_LIB)
+	$(CXX) -o $@ $^ $(SIM_LIB)
 
 spidev_test:
 
 clean:
+	$(MAKE) -C ../sim clean
 	rm -f spidev_test beagleg-protocol *.o
+
+PHONY:
